[message-system] - ChannelService  - getParticipantsUserIds()  => 리턴값을 수정가능하게 수정